# a2a-agents-practice

./: .gitignore  README.md  docker-compose.observability.yml  pyproject.toml
agents/research/: __main__.py  card.py  graph.py
agents/summarizer/: __main__.py  card.py  graph.py
common/: agent_card.py  graph_progress.py  langgraph_executor.py  server.py  telemetry.py
config/: agentgateway.yaml
config/observability/: prometheus.yml
config/observability/grafana/: a2a-dashboard.json  dashboards.yml
docs/superpowers/plans/: 2026-06-24-a2a-multi-agent-orchestration.md  2026-06-27-agent-to-agent-streaming.md  2026-06-27-orchestrator-sse-server.md  2026-06-27-react-orchestrator.md  2026-06-28-agentgateway-a2a-proxy.md  2026-06-28-agentgateway-path-routing.md  2026-06-29-agentgateway-observability.md
docs/superpowers/specs/: 2026-06-24-a2a-multi-agent-orchestration-design.md  2026-06-27-agent-to-agent-streaming-design.md  2026-06-27-orchestrator-sse-server-design.md  (+3 more)
orchestrator/: __main__.py  agent_tool.py  client.py  events.py  llm.py  middleware.py  orchestrate.py  planner.py  registry.py  server.py
scripts/: run_all.sh  run_with_gateway.sh
tests/: test_agent_card.py  test_agent_tool.py  test_card_public_url.py  test_client.py  test_events.py  test_graph_progress.py  test_langgraph_executor.py  test_llm.py  test_middleware.py  test_orchestrate.py  test_orchestrator_server.py  test_planner.py  test_registry.py  test_research_graph.py  test_server.py  test_streaming_integration.py  test_summarizer_graph.py  test_telemetry.py
