[project]
name = "a2a-agents"
version = "0.1.0"
description = "A2A multi-agent orchestration PoC"
requires-python = ">=3.11"
dependencies = [
    "a2a-sdk[http-server]==1.1.0",
    "langgraph>=1.2,<2",
    "langchain-openai>=1.3,<2",
    "langchain-tavily>=0.2,<0.3",
    "fastapi>=0.115",
    "sse-starlette>=2",
    "uvicorn>=0.49",
    "httpx>=0.28",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "anyio>=4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["common", "agents", "agents.research", "agents.summarizer", "orchestrator"]
